--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
     "next": "14.0.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
