--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@types/d3": "^7.4.3",
     "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
+    "@visx/legend": "^3.5.0",
     "@visx/mock-data": "^3.3.0",
     "@visx/responsive": "^3.3.0",
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
+    "@visx/text": "^3.3.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
     "next": "14.0.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^9.0.2",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
